// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should Mistakes render correctly With mistakes count = 0 1`] = `
<div
  className="game__mistakes"
/>
`;

exports[`Should Mistakes render correctly With mistakes count = 1 1`] = `
<div
  className="game__mistakes"
>
  <div
    className="wrong"
  />
</div>
`;
